# chess

./: .gitignore  CMakeLists.txt  board.cpp  board.h  clang-format.sh  coordinate.cpp  coordinate.h  game.cpp  game.h  install_dependencies.sh  main.cpp  move.h  movedirs.h  pieces.cpp  pieces.h  run.sh  square.cpp  square.h
backend/: CMakeLists.txt
backend/impl/: board.cpp  coordinate.cpp  pieces.cpp
backend/include/: board.h  move.h  movedirs.h  pieces.h
configs/: drogon.json
frontend/: CMakeLists.txt
frontend/impl/: boarditem.cpp  mainwidget.cpp  pieceitem.cpp  scene.cpp  validmoveitem.cpp
frontend/include/: boarditem.h  mainwidget.h  pieceitem.h  scene.h  validmoveitem.h
lib/: CMakeLists.txt
lib/impl/: board.cpp  coordinate.cpp  game.cpp  pieces.cpp
lib/include/: board.h  coordinate.h  game.h  movedirs.h  pieces.h
server/: CMakeLists.txt
server/impl/: handler.cpp
server/include/: handler.h
web_frontend/: chess.html  chess.js  index.html  main.js
